@@ -1,96 +1,96 @@
 package com.souk.product.api.dto;
 
-import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.souk.common.domain.Product;
-import com.souk.common.domain.ProductImage;
+import com.souk.common.domain.ProductMedia;
 
-import jakarta.validation.constraints.DecimalMin;
+import jakarta.validation.constraints.NotNull;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@JsonInclude(JsonInclude.Include.NON_NULL)
 public record ProductUpdateRequest(
-
+        @NotNull Long id,
         String name,
         String sku,
-
-        @DecimalMin(value = "0.0", inclusive = false, message = "Price must be positive")
         BigDecimal price,
-
         Long vendorId,
         Boolean available,
-
         JsonNode categoryDetails,
         JsonNode schedule,
-
-        List<ImageRequest> images
+        List<MediaRequest> media
 ) {
+    public Product applyTo(Product existing) {
+        if (name != null) existing.setName(name);
+        if (sku != null) existing.setSku(sku);
+        if (price != null) existing.setPrice(price);
+        if (vendorId != null) existing.setVendorId(vendorId);
+        if (available != null) existing.setAvailable(available);
+        if (categoryDetails != null) existing.setCategoryDetails(categoryDetails);
+        if (schedule != null) existing.setSchedule(schedule);
 
-    /**
-     * Applies the fields in this update request to an existing Product entity.
-     */
-    public void applyTo(Product product) {
-        if (name != null) product.setName(name);
-        if (sku != null) product.setSku(sku);
-        if (price != null) product.setPrice(price);
-        if (vendorId != null) product.setVendorId(vendorId);
-        if (available != null) product.setAvailable(available);
-        if (categoryDetails != null) product.setCategoryDetails(categoryDetails);
-        if (schedule != null) product.setSchedule(schedule);
-
-        if (images != null && !images.isEmpty()) {
-            product.setImages(
-                    images.stream()
-                            .map(ImageRequest::toDomain)
-                            .collect(Collectors.toList())
-            );
+        // Replace media list if provided
+        if (media != null && !media.isEmpty()) {
+            List<ProductMedia> mediaEntities = media.stream()
+                    .map(MediaRequest::toDomain)
+                    .toList();
+            mediaEntities.forEach(m -> m.setProduct(existing));
+            existing.setMedia(mediaEntities);
         }
+
+        return existing;
     }
 
-    /**
-     * Nested record for image updates (similar to ProductCreateRequest.ImageRequest)
-     */
-    public record ImageRequest(
-            Long id, // optional — if present, can be used to update an existing image
-            String url,
+    public record MediaRequest(
+            String mediaUrl,
+            String description,
             String mimeType,
             Integer width,
             Integer height,
             Integer sizeKb,
-            String storageProvider,
-            String validationStatus
+            Integer durationSeconds,
+            String resolution,
+            String mediaType,        // IMAGE or VIDEO
+            String storageProvider,  // LOCAL, S3, CLOUDFLARE, GCP
+            String validationStatus  // PENDING, VALIDATED, REJECTED
     ) {
-        public ProductImage toDomain() {
-            ProductImage img = new ProductImage();
-            img.setImageUrl(url);
-            img.setMimeType(mimeType);
-            img.setWidth(width);
-            img.setHeight(height);
-            img.setSizeKb(sizeKb);
+        public ProductMedia toDomain() {
+            ProductMedia media = new ProductMedia();
+
+            media.setMediaUrl(mediaUrl);
+            media.setDescription(description);
+            media.setMimeType(mimeType);
+            media.setWidth(width);
+            media.setHeight(height);
+            media.setSizeKb(sizeKb);
+            media.setDurationSeconds(durationSeconds);
+            media.setResolution(resolution);
+
+            // Parse enums safely
+            if (mediaType != null) {
+                try {
+                    media.setMediaType(ProductMedia.MediaType.valueOf(mediaType.toUpperCase()));
+                } catch (IllegalArgumentException ignored) {
+                    media.setMediaType(ProductMedia.MediaType.IMAGE);
+                }
+            }
 
             if (storageProvider != null) {
                 try {
-                    img.setStorageProvider(
-                            ProductImage.StorageProvider.valueOf(storageProvider.toUpperCase())
-                    );
+                    media.setStorageProvider(ProductMedia.StorageProvider.valueOf(storageProvider.toUpperCase()));
                 } catch (IllegalArgumentException ignored) {
-                    img.setStorageProvider(ProductImage.StorageProvider.LOCAL);
+                    media.setStorageProvider(ProductMedia.StorageProvider.LOCAL);
                 }
             }
 
             if (validationStatus != null) {
                 try {
-                    img.setValidationStatus(
-                            ProductImage.ValidationStatus.valueOf(validationStatus.toUpperCase())
-                    );
+                    media.setValidationStatus(ProductMedia.ValidationStatus.valueOf(validationStatus.toUpperCase()));
                 } catch (IllegalArgumentException ignored) {
-                    img.setValidationStatus(ProductImage.ValidationStatus.PENDING);
+                    media.setValidationStatus(ProductMedia.ValidationStatus.PENDING);
                 }
             }
 
-            return img;
+            return media;
         }
     }
 }
